kubeflow-deployments/gcp-private-0527/upstream/manifests/istio-1-3-1/istio-install-1-3-1/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: security
    istio: citadel
  name: istio-citadel
spec:
  ports:
  - name: grpc-citadel
    port: 8060
    protocol: TCP
    targetPort: 8060
  - name: http-monitoring
    port: 15014
  selector:
    istio: citadel
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: galley
    istio: galley
  name: istio-galley
spec:
  ports:
  - name: https-validation
    port: 443
  - name: http-monitoring
    port: 15014
  - name: grpc-mcp
    port: 9901
  selector:
    istio: galley
---
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"http2":"iap-backendconfig"}}'
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  type: NodePort
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  ports:
  - name: status-port
    port: 15020
    targetPort: 15020
  - name: http2
    nodePort: 31380
    port: 80
    targetPort: 80
  - name: https
    nodePort: 31390
    port: 443
  - name: tcp
    nodePort: 31400
    port: 31400
  - name: https-kiali
    port: 15029
    targetPort: 15029
  - name: https-prometheus
    port: 15030
    targetPort: 15030
  - name: https-grafana
    port: 15031
    targetPort: 15031
  - name: https-tracing
    port: 15032
    targetPort: 15032
  - name: tls
    port: 15443
    targetPort: 15443
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pilot
    istio: pilot
  name: istio-pilot
spec:
  ports:
  - name: grpc-xds
    port: 15010
  - name: https-xds
    port: 15011
  - name: http-legacy-discovery
    port: 8080
  - name: http-monitoring
    port: 15014
  selector:
    istio: pilot
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    networking.istio.io/exportTo: '*'
  labels:
    app: mixer
    istio: mixer
  name: istio-policy
spec:
  ports:
  - name: grpc-mixer
    port: 9091
  - name: grpc-mixer-mtls
    port: 15004
  - name: http-monitoring
    port: 15014
  selector:
    istio: mixer
    istio-mixer-type: policy
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sidecarInjectorWebhook
    istio: sidecar-injector
  name: istio-sidecar-injector
spec:
  ports:
  - name: https-inject
    port: 443
  - name: http-monitoring
    port: 15014
  selector:
    istio: sidecar-injector
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    networking.istio.io/exportTo: '*'
  labels:
    app: mixer
    istio: mixer
  name: istio-telemetry
spec:
  ports:
  - name: grpc-mixer
    port: 9091
  - name: grpc-mixer-mtls
    port: 15004
  - name: http-monitoring
    port: 15014
  - name: prometheus
    port: 42422
  selector:
    istio: mixer
    istio-mixer-type: telemetry
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  labels:
    app: prometheus
  name: prometheus
spec:
  ports:
  - name: http-prometheus
    port: 9090
    protocol: TCP
  selector:
    app: prometheus
